--- a/frontend/style.css
+++ b/frontend/style.css
@@ -3,3 +3,10 @@ h1 {
     font-size: 30px;
 
 }
+
+a {
+    font-family: 'Times New Roman', Times, serif;
+    color: brown;
+    font-size: 40px;
+
+}
